# ClawTeam-OpenClaw

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_IT.md  README_JA.md  README_KO.md  README_KR.md  README_PT-BR.md  README_RU.md  README_TW.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.agents/skills/clawteam/: SKILL.md
.agents/skills/clawteam-dev/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml
clawteam/: __init__.py  __main__.py  config.py  fileutil.py  identity.py  model_resolution.py  paths.py  platform_compat.py
clawteam/board/: collector.py  renderer.py  server.py
clawteam/board/static/: index.html
clawteam/cli/: __init__.py  commands.py
clawteam/spawn/: __init__.py  adapters.py  base.py  cli_env.py  command_validation.py  prompt.py  registry.py  sessions.py  subprocess_backend.py  subprocess_wrapper.py  tmux_backend.py
clawteam/store/: __init__.py  file.py
clawteam/team/: __init__.py  costs.py  gateway.py  lifecycle.py  mailbox.py  manager.py  models.py  plan.py  snapshot.py  tasks.py  waiter.py  watcher.py
clawteam/templates/: __init__.py  code-review.toml  hedge-fund.toml  research-paper.toml
clawteam/transport/: __init__.py  base.py  claimed.py  file.py  p2p.py
clawteam/worker/: clawworker_spawner.py
clawteam/workspace/: __init__.py  context.py  git.py  manager.py  models.py
docs/: transport-architecture.md
docs/superpowers/plans/: 2026-03-21-per-agent-model-assignment.md
scripts/: install-openclaw.sh
skills/clawteam/: SKILL.md
skills/clawteam/agents/: openai.yaml
skills/clawteam/references/: cli-reference.md  workflows.md
skills/openclaw/: SKILL.md
tests/: conftest.py  test_adapters.py  test_board.py  test_config.py  test_costs.py  test_gateway_integration.py  test_identity.py  test_inbox_routing.py  test_lifecycle.py  test_mailbox.py  test_manager.py  test_model_resolution.py  test_models.py  test_openclaw_agent.py  test_phase2.py  test_platform_compat.py  test_prompt.py  test_registry.py  test_snapshots.py  test_spawn_backends.py  test_spawn_cli.py  test_spawn_subproject_workspace.py  test_subprocess_wrapper.py  test_task_store_locking.py  test_tasks.py  test_templates.py  test_workspace_subproject_followups.py
