[project]
name = "clawteam"
version = "0.3.0"
description = "Framework-agnostic multi-agent coordination CLI"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ClawTeam contributors"}
]
keywords = ["ai", "agent", "multi-agent", "team", "coordination", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "rich>=13.0.0,<15.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "ruff>=0.1.0",
]
p2p = [
    "pyzmq>=25.0.0,<27.0.0",
]

[project.scripts]
clawteam = "clawteam.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clawteam"]

[tool.hatch.build.targets.wheel.force-include]
"clawteam/board/static" = "clawteam/board/static"
"clawteam/templates" = "clawteam/templates"

[tool.hatch.build.targets.sdist]
include = [
    "clawteam/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
